Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13559

lfs mirror delete wrong error message

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Upstream
    • 3
    • 9223372036854775807

      lfs mirror delete returning a wrong error message when there is no mirror with a given pool.

      [root@vm6 test]# lfs mirror delete --pool hdd foo
      error lfs mirror delete: file 'foo' does not contain mirror with id 0
      

      Same thing occurs when there is no mirror with a given comp-id.

            baillergeau Kevin Baillergeau (Inactive)
            baillergeau Kevin Baillergeau (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: